# be-my-valentines

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: deploy.yml
assets/: main.css  tailwind.css
docs/: 404.html  CNAME  index.html
docs/assets/: f1-meme-dxh6bbdbe61e0159ec8.avif  main-dxh0c220368cc66a56.css  main-dxh2f19ff1114925ebb.css  main-dxh303435a0b33cfd85.css  main-dxh8398ed9c86d23262.css  main-dxhcf6a8dfb9d3456b0.css  main-dxhdfb2211ffabb4a.css  main-dxhf46af1e53e6d13b0.css  tailwind-dxh434f20d4f0b2fa5.css  tailwind-dxh533a84152db86123.css  tailwind-dxh855cf93d987c51c2.css  tailwind-dxha6ddbd1d87681a76.css  tailwind-dxhb0729af80f12232.css  tailwind-dxhb535793758f0db.css  tailwind-dxhbd61e65b5ebe034.css  tailwind-dxhdbb7382b5bf9a461.css  willow-dxhfa8fcb5fbc47497b.avif  willow2-dxh4467ddd8427c8788.avif
docs/wasm/: be-my-valentines.js  hot_dog.js
src/: guide_rsx.rs  guide_state.rs  main.rs
