[package]
name = "be-my-valentines"
version = "0.1.0"
authors = ["CamCoop1 <bigolcammyh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-timer = "0.5.0"
tokio = { version = "1.49.0", features = ["time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
